--- a/test/test.styl
+++ b/test/test.styl
@@ -5,7 +5,7 @@
 
 .radius-box {
   l-wh: 50px 30px 10px;
-  t-fl: 50px 60px center;
+  t-fl: 50px 60px #fff center;
   l-mh: 50px 0;
   l-ph: 50px 0;
   l-mv: 50px;
@@ -15,8 +15,8 @@
   l-fixed: 50px 50px;
   t-clamp: 1;
   t-clamp: 3;
-  s-bcb: #f2f2f2 #000 #666;
-  s-bcb: url('image_path') #000;
+  s-bcb: #f2f2f2;
+  s-bcb: url('image_path') cover;
   s-bm: cover;
   a-eff: fade 1s 0.5s;
   a-num: 2 true;
