--- a/variable.styl
+++ b/variable.styl
@@ -12,7 +12,7 @@ yoz_color ?= {
   border: #e8eaec
 };
 // 常用阴影
-yoz_shadow_color ?= {
+yoz_shadow ?= {
   shadow: rgba(0, 0, 0, 0.15)
 };
 // 常用字体
@@ -20,11 +20,11 @@ yoz_font_family ?= {
   sans: unquote('-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif'),
   serif: unquote('Noto Serif SC')
 };
-// 常用字体大小
+// 常用字体大小与行距
 yoz_font_size ?= {
-  s: 12px,
-  m: 14px,
-  l: 18px
+  s: 12px 20px,
+  m: 14px 24px,
+  l: 18px 30px
 };
 // 常用间距大小
 yoz_spacing ?= {
