--- a/test/test.styl
+++ b/test/test.styl
@@ -5,19 +5,18 @@
 
 .radius-box {
   l-wh: 50px 30px 10px;
-  t-fl: 50px 60px #fff center;
+  t-fl: 50px 60px #fff;
   l-mh: 50px 0;
   l-ph: 50px 0;
   l-mv: 50px;
   l-pv: 50px;
-  l-abso: 50px 0 true;
-  l-rela: 50px 0;
-  l-fixed: 50px 50px;
+  l-abs: 50px 0 'rb';
+  l-rel: 50px 0 'lb';
+  l-fix: 50px 50px;
   t-clamp: 1;
   t-clamp: 3;
-  s-bcb: #f2f2f2;
-  s-bcb: url('image_path') cover;
-  s-bm: cover;
+  s-bg: #f2f2f2;
+  s-bg: url('image_path') cover;
   a-eff: fade 1s 0.5s;
-  a-num: 2 true;
+  a-loop: 2 true;
 }
