upd: shortcut 模块化管理

--- a/mixin.styl
+++ b/mixin.styl
@@ -7,6 +7,9 @@ s-bg(bg, s = cover, p = center, r = no-repeat) {
   background-repeat: r;
 }
 
+s-border(width, _color, style = solid, dir) {
+}
+
 // text quick set font-size, line-height, color
 t-fl(s, lh = s, c = false) {
   font-size: s;
