--- a/test/test.styl
+++ b/test/test.styl
@@ -1,7 +1,6 @@
-// @import './test/custom.styl';
+@import './test/custom.styl';
 @import './mixin.styl';
 @import './shortcut.styl';
-@import './flex.styl';
 
 .radius-box {
   l-wh: 50px 30px 10px;
