--- a/modules/flex.styl
+++ b/modules/flex.styl
@@ -1,5 +1,4 @@
-.flex {
-	// display: flex;
+.{yoz_prefix}flex {
 	$flex_direction = {
 		h: row,
 		h_rtl: row-reverse,
@@ -44,17 +43,21 @@
 		&-ac_{$name} {
 			align-content: $value;
 		}
+	}
 
-		$flex_ai = {
-			s: flex-start,
-			e: flex-end,
-			c: center
-		};
+	$flex_ai = {
+		s: flex-start,
+		e: flex-end,
+		c: center
+	};
 
-		for $name, $value in $flex_ai {
-			&-ai_{$name} {
-				align-items: $value;
-			}
+	for $name, $value in $flex_ai {
+		&-ai_{$name} {
+			align-items: $value;
+		}
+
+		&-as_{$name} {
+			align-self: $value;
 		}
 	}
 
@@ -63,6 +66,6 @@
 	}
 
 	&-0 {
-		flex: 0 0; 
+		flex: 0 0;
 	}
 }
