完成栅格化系统样式生成

--- a/mixin.styl
+++ b/mixin.styl
@@ -7,9 +7,6 @@ s-bg(bg, s = cover, p = center, r = no-repeat) {
   background-repeat: r;
 }
 
-s-border(width, _color, style = solid, dir) {
-}
-
 // text quick set font-size, line-height, color
 t-fl(s, lh = s, c = false) {
   font-size: s;
@@ -20,6 +17,7 @@ t-fl(s, lh = s, c = false) {
   }
 }
 
+// text quick set over word ellipsis
 t-clamp(n) {
   if (n == 1) {
     text-overflow: ellipsis;
