--- a/shortcut.styl
+++ b/shortcut.styl
@@ -1,7 +1,7 @@
-@import './variable.styl';
-@import './modules/util.styl';
-@import './modules/flex.styl';
-@import './modules/grid.styl';
-@import './modules/spacing.styl';
-@import './modules/text.styl';
-@import './modules/line.styl';
+@import './src/variable.styl';
+@import './src/util.styl';
+@import './src/flex.styl';
+@import './src/spacing.styl';
+@import './src/text.styl';
+@import './src/line.styl';
+@import './src/grid.styl';
