--- a/test/custom.styl
+++ b/test/custom.styl
@@ -1,5 +1,5 @@
 
-yoz_prefix = '';
+// yoz_prefix = 'yoz-';
 /**
  * 常用颜色
  * default variable by color
@@ -65,12 +65,10 @@ yoz_spacing = {
  * 默认栅格化相关变量
  * default variable by grid system
  */
-yoz_grid_col = 24; // 自定义栅格数
+yoz_grid_col = 4; // 自定义栅格数
 yoz_grid_query = {
   normal: '',
   xs: 'max-width: 320px',
-  sm: 'min-width: 768px',
   md: 'min-width: 992px',
-  lg: 'min-width: 1200px',
   xl: 'min-width: 1920px'
 };
