--- a/src/mixin.styl
+++ b/src/mixin.styl
@@ -26,6 +26,7 @@ t-clamp(n) {
   } else {
     display: -webkit-box;
     overflow: hidden;
+    -webkit-box-orient: vertical;
     -webkit-line-clamp: n;
   }
 }
