--- a/src/shortcut/background.styl
+++ b/src/shortcut/background.styl
@@ -13,7 +13,7 @@
 		fill: 100% 100%,
 	};
 
-	for $name, $mode in background_mode {
+	for $name, $mode in $background_mode {
 		&bg-m_{$name} {
 			background-size: $mode;
 		}
