--- a/src/shortcut/util.styl
+++ b/src/shortcut/util.styl
@@ -1,6 +1,6 @@
 // float
 .{yoz_prefix} {
-	&float_l {
+	&float-l {
 		float: left;
 	}
 
@@ -12,12 +12,6 @@
 		display: table;
 		content: ' ';
 		clear: both;
-	}
-
-	for $name, $color in yoz_color {
-		&bg_{$name} {
-			background-color: $color;
-		}
 	}
 
 	for $name, $value in yoz_shadow {
