--- a/src/variable.styl
+++ b/src/variable.styl
@@ -22,7 +22,7 @@ yoz_color ?= {
 yoz_line ?= {
   so1: 1px solid yoz_color.border,
   do1: 1px dotted yoz_color.border,
-  da2: 1px dashed yoz_color.border
+  da1: 1px dashed yoz_color.border
 };
 /**
  * 常用阴影变量
@@ -38,7 +38,7 @@ yoz_shadow ?= {
  */
 yoz_font_family ?= {
   sans: unquote('-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif'),
-  serif: unquote('Noto Serif SC')
+  serif: unquote('serif')
 };
 /**
  * 常用字体大小与行距变量
