--- a/src/shortcut.styl
+++ b/src/shortcut.styl
@@ -2,6 +2,7 @@
 @import './shortcut/util.styl';
 @import './shortcut/flex.styl';
 @import './shortcut/spacing.styl';
+@import './shortcut/background.styl';
 @import './shortcut/text.styl';
 @import './shortcut/line.styl';
 @import './shortcut/grid.styl';
