upd: 更新说明文档并优化遇到的问题

--- a/src/shortcut/background.styl
+++ b/src/shortcut/background.styl
@@ -1,4 +1,3 @@
-// float
 .{yoz_prefix} {
 	for $name, $color in yoz_color {
 		&bg-c_{$name} {
@@ -16,6 +15,7 @@
 	for $name, $mode in $background_mode {
 		&bg-m_{$name} {
 			background-size: $mode;
+			background-position: center;
 		}
 	}
 }
