--- a/src/shortcut/util.styl
+++ b/src/shortcut/util.styl
@@ -16,9 +16,111 @@
 		}
 	}
 
+	&spac {
+		for $name, $spacing in yoz_spacing {
+			&-m_{$name} {
+				margin: $spacing;
+			}
+
+			&-mv_{$name} {
+				margin-top: $spacing;
+				margin-bottom: $spacing;
+			}
+
+			&-mh_{$name} {
+				margin-left: $spacing;
+				margin-right: $spacing;
+			}
+
+			&-mt_{$name} {
+				margin-top: $spacing;
+			}
+
+			&-mb_{$name} {
+				margin-bottom: $spacing;
+			}
+
+			&-ml_{$name} {
+				margin-left: $spacing;
+			}
+
+			&-mr_{$name} {
+				margin-right: $spacing;
+			}
+
+			&-p_{$name} {
+				padding: $spacing;
+			}
+
+			&-pv_{$name} {
+				padding-top: $spacing;
+				padding-bottom: $spacing;
+			}
+
+			&-ph_{$name} {
+				padding-left: $spacing;
+				padding-right: $spacing;
+			}
+
+			&-pt_{$name} {
+				padding-top: $spacing;
+			}
+
+			&-pb_{$name} {
+				padding-bottom: $spacing;
+			}
+
+			&-pl_{$name} {
+				padding-left: $spacing;
+			}
+
+			&-pr_{$name} {
+				padding-right: $spacing;
+			}
+		}
+	}
+
+	&line {
+		$yoz_line_dir = {
+			l: left,
+			r: right,
+			t: top,
+			b: bottom
+		};
+
+		for $name, $value in yoz_line {
+			&-a_{$name} {
+				border: $value;
+			}
+
+			&-v_{$name} {
+				border-top: $value;
+				border-bottom: $value;
+			}
+
+			&-v_{$name} {
+				border-left: $value;
+				border-right: $value;
+			}
+
+			for $dir, $dir_value in $yoz_line_dir {
+				&-{$dir}_{$name} {
+					border-{$dir_value}: $value;
+				}
+			}
+		}
+	}
+
 	for $name, $value in yoz_shadow {
-		&shadow_{$name} {
+		&shadow-{$name} {
 			box-shadow: $value;
 		}
 	}
+
+	for $name, $value in yoz_radius {
+		&radius-{$name} {
+			border-radius: $value;
+		}
+	}
+	
 }
