--- a/test/test.styl
+++ b/test/test.styl
@@ -8,8 +8,14 @@
 	l-rel: 0 0;
 	l-mv: 30px;
 
+	.box {
+		l-wh: 100px 100px;
+		color: yoz_color.sub_text;
+		text-align: center;
+	}
+
 	&:before {
-		content: '示例:';
+		content: 'Result:';
 		t-fl: 12px 20px;
 		display: block;
 		l-abs: 0 -20px;
