--- a/src/mixin.styl
+++ b/src/mixin.styl
@@ -128,4 +128,12 @@ f-dir(dir, jc = normal, ai = normal, w = nowrap) {
   align-items: ai;
   flex-wrap: w;
 }
+
+f-w(dir, jc = normal, ai = normal, w = nowrap) {
+  display: flex;
+  flex-direction: dir;
+  justify-content: jc;
+  align-items: ai;
+  flex-wrap: w;
+}
 // #endregion
