--- a/src/shortcut/flex.styl
+++ b/src/shortcut/flex.styl
@@ -1,9 +1,9 @@
 .{yoz_prefix}flex {
 	$flex_direction = {
 		h: row,
-		h_rtl: row-reverse,
+		hr: row-reverse,
 		v: column,
-		v_rtl: column-reverse
+		vr: column-reverse
 	};
 
 	for $name, $value in $flex_direction {
