--- a/docs/style.css
+++ b/docs/style.css
@@ -334,7 +334,7 @@
   display: flex;
   flex-direction: row;
 }
-.flex-h_rtl {
+.flex-hr {
   display: flex;
   flex-direction: row-reverse;
 }
@@ -342,7 +342,7 @@
   display: flex;
   flex-direction: column;
 }
-.flex-v_rtl {
+.flex-vr {
   display: flex;
   flex-direction: column-reverse;
 }
