--- a/src/variable.styl
+++ b/src/variable.styl
@@ -80,16 +80,16 @@ yoz_spacing ?= {
  * 默认栅格化相关变量
  * default variable by grid system
  */
-yoz_grid_col ?= 24; // 自定义栅格数
+yoz_grid_col ?= 24;
 // 栅格化 栅格间距
 yoz_grid_gutter ?= {
   s: 10px,
   m: 20px
-}; 
+};
 // 栅格化 响应式界限
 yoz_grid_query ?= {
-  lg: 'max-width: 1200px', //超大屏
-  md: 'max-width: 992px', //电脑
-  pa: 'max-width: 768px', //平板
-  ph: 'max-width: 540px', //手机
+  l: 'max-width: 1200px',
+  m: 'max-width: 992px',
+  t: 'max-width: 768px',
+  p: 'max-width: 540px'
 };
