--- a/test/test.styl
+++ b/test/test.styl
@@ -8,6 +8,7 @@
 	l-ph: 50px 0;
 	l-mv: 50px;
 	l-pv: 50px;
+	l-flex: hr sb c wrap;
 	l-abs: 50px 0 'rb';
 	l-rel: 50px 0 'lb';
 	l-fix: 50px 50px;
@@ -17,5 +18,4 @@
 	s-bg: url('image_path') cover;
 	a-eff: fade 1s 0.5s;
 	a-loop: 2 true;
-	f-lay: hr sb c wrap;
 }
