--- a/src/mixin.styl
+++ b/src/mixin.styl
@@ -44,12 +44,12 @@ l-wh(w, h = w, r = false) {
 
 // quick set about flex attribute
 l-flex(dir, jc = fs, ai = s, w = nowrap) {
-	$flex_direction = {
-		h: row,
-		hr: row-reverse,
-		v: column,
-		vr: column-reverse
-	};
+  $flex_direction = {
+    h: row,
+    hr: row-reverse,
+    v: column,
+    vr: column-reverse
+  };
   $flex_content = {
     fs: flex-start,
     c: center,
@@ -59,10 +59,10 @@ l-flex(dir, jc = fs, ai = s, w = nowrap) {
     sb: space-between
   };
   $flex_items = {
-		fs: flex-start,
-		c: center,
-		fe: flex-end,
-		st: stretch
+    fs: flex-start,
+    c: center,
+    fe: flex-end,
+    st: stretch
   };
   display: flex;
   flex-direction: $flex_direction[dir];
@@ -115,18 +115,18 @@ _pos(type, x = auto, y = auto, dir = 'lt') {
 }
 
 // position relative
-l-rel(l, t, r = 'lt') {
-  _pos('relative', l, t, r);
+l-rel(x = auto, y = auto, r = 'lt') {
+  _pos('relative', x, y, r);
 }
 
 // position absolute
-l-abs(l, t, r = 'lt') {
-  _pos('absolute', l, t, r);
+l-abs(x = auto, y = auto, r = 'lt') {
+  _pos('absolute', x, y, r);
 }
 
 // position fixed
-l-fix(l, t, r = 'lt') {
-  _pos('fixed', l, t, r);
+l-fix(x = auto, y = auto, r = 'lt') {
+  _pos('fixed', x, y, r);
 }
 
 // #endregion
@@ -146,9 +146,3 @@ a-loop(t = infinite, re = false) {
     animation-direction: alternate;
   }
 }
-
-// #endregion
-
-// #region flex
-
-// #endregion
