upd: 更新文档错误的地方 fix: 1行的超出省略问题

--- a/src/shortcut/text.styl
+++ b/src/shortcut/text.styl
@@ -38,11 +38,12 @@
 
 			if ($line == 1) {
 				white-space: nowrap;
+			} else {
+				display: -webkit-box;
+				-webkit-box-orient: vertical;
+				-webkit-line-clamp: $line;
 			}
 
-			display: -webkit-box;
-			-webkit-box-orient: vertical;
-			-webkit-line-clamp: $line;
 		}
 	}
 }
