--- a/docs/style.css
+++ b/docs/style.css
@@ -528,6 +528,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
 }
