--- a/src/mixin.styl
+++ b/src/mixin.styl
@@ -45,7 +45,7 @@ l-wh(w, h = w, r = false) {
 }
 
 // quick set about flex attribute
-l-flex(dir, jc = fs, ai = s, w = nowrap) {
+l-flex(dir, jc = fs, ai = st, w = nowrap) {
   $flex_direction = {
     h: row,
     hr: row-reverse,
