--- a/src/variable.styl
+++ b/src/variable.styl
@@ -62,8 +62,9 @@ yoz_font_family ?= {
 yoz_font_size ?= {
   s: 12px 20px,
   m: 14px 22px,
-  b: 16px 24px,
-  l: 18px 28px
+  st: 16px 24px,
+  t: 18px 28px,
+  lt: 20px 30px
 };
 /**
  * 常用间距变量
